movie_match/static/css/base/style.css
/* ... */
.neon-glow-hover.collection-item {
    background-color: unset;
}
.neon-glow-hover.collection-item.avatar i.circle {
    background-color: unset;
    color:unset;
}

.neon-orange {
    --hue:27;
}
.neon-purple {
    --hue:282;
}
.neon-cyan {
    --hue:200;
}

.neon-glow-hover, 
.neon-unlit, 
.neon-unlit:hover, 
#search-input {
    color: var(--grey_lighten-2);
    background-color: #69696933;
    box-shadow: 
        inset 0 0 1em 0 hsl(var(--hue), 79%, 46%),
        inset 0 0 0.3em 0 hsl(var(--hue), 66%, 30%),
        0 0 0.3em 0 hsl(var(--hue), 79%, 46%);
}
.neon-glow-hover:hover, 
.neon-lit, 
.neon-lit:hover, 
#search-input:focus {
    color: hsl(var(--hue), 66%, 30%);
    background-color: #ffffff !important;
    box-shadow: 
    inset 0 0 1em 0 hsl(var(--hue), 79%, 46%),
    inset 0 0 0.3em 0 hsl(var(--hue), 66%, 30%),
        0 0 2.5em 0 hsl(var(--hue), 100%, 55%),
        0 0 4em 0 hsl(var(--hue), 79%, 46%),
        0 0 5em 0 hsl(var(--hue), 66%, 30%);
}

.neon-glow-hover.dimmed:hover, 
.neon-lit.dimmed, 
.neon-lit.dimmed:hover {
    color: hsl(var(--hue), 66%, 30%);
    background-color: #ffffff !important;
    box-shadow: 
    inset 0 0 1em 0 hsl(var(--hue), 79%, 46%),
    inset 0 0 0.3em 0 hsl(var(--hue), 66%, 30%),
        0 0 0.3em 0 hsl(var(--hue), 100%, 55%),
        0 0 1.2em 0 hsl(var(--hue), 79%, 46%),
        0 0 1.8em 0 hsl(var(--hue), 66%, 30%);
}

/* For floating/fixed action buttons */
.neon-glow-hover i, 
.neon-unlit i, 
.neon-unlit:hover i, 
#search-input {
    color: var(--grey_lighten-2);
}
.neon-glow-hover:hover i, 
.neon-lit i, 
.neon-lit:hover i, 
#search-input:focus i {
    color: hsl(var(--hue), 66%, 30%);
}

/* [+] */
/* ================================Movie Card================================ */
.card div.card-image span.card-title{
    text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
}

.card .card-image img {
    aspect-ratio: 2/3;
}

.card-btn {
    color: hsl(var(--hue), 79%, 86%);
    border: 2px solid hsl(var(--hue), 79%, 86%);
    background-color: #202020cc;
}

/* [+] */
/* ================================Movie List================================ */
#movie_list {
    display:grid;
    width:100%;
    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
    gap:15px;
}

@media(max-width:1050px) {
    #movie_list {
        grid-template-columns: repeat(auto-fill, minmax(170px, 1fr));
    }
}

@media(max-width:767px) {
    #movie_list {
        grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
    }
}

@media(max-width:380px) {
    #movie_list {
        grid-template-columns: repeat(auto-fill, minmax(136px, 1fr));
        gap: 10px;
    }
}

/* [+] */
/* =========================Nav========================= */
#nav-bar .user-name, #side-menu .user-name, #side-menu .user-name i{
    color: var(--cyan_accent-2);
    font-weight: 800;
    font-size: 1.5rem;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

#side-menu .user-name i{
    margin: 0 8px 0 0;
}

.registration-link{
    margin-top: 1rem;
    font-size: 0.8rem;
    color: var(--orange_darken-3);
    line-height:normal;
    align-self: center;
}

/* [-] */
/* -------------------------Header========================= */
header nav {
    margin-bottom: 2rem;
    background-color: var(--purple_accent-2);
    color: #000000;
}

header nav a {
    color: #000000;
    font-family: var(--font-primary);
}

.logo1 {
    color: #ffffff;
    text-shadow: 
        0 0 3px var(--cyan_accent-2),
        0 0 5px var(--blue_darken-2),
        0 0 7px var(--indigo_darken-4);
        white-space: nowrap;
}
.logo2 {
    color: #ffffff;
    text-shadow: 
        0 0 4px var(--purple_accent-2),
        0 0 6px var(--purple_darken-2),
        0 0 8px var(--deep-purple_darken-4);
}

header nav a.brand-logo {
    margin: 0 20px;
    font-family: var(--font-primary);
    font-weight: 400;
}

/* -----------------------HeaderLoginForm----------------------- */
/* Undo Materialize Nav Settings */
.login-form {
    line-height: normal;
}

#nav-login-form input {
    border-bottom: 1px solid var(--grey_darken-2);
}

/* Vertical Login Form */
#nav-login-form {
    padding: 0px 1rem;
    padding-bottom: 1rem;
    height: auto;
    display:flex;
    flex-direction: column;
}
#nav-login-form button {
    align-self: flex-end;
}
/* ---------------------- */

/* Horizontal Login Form */
/* #nav-login-form {
    padding: 0px 1rem;
    height: 100%;
    display:flex;
    flex-direction: row;
    align-items: center;
} */
/* ---------------------- */

#nav-login-form div.input-field {
    margin-top: 1rem;
    margin-bottom: 1rem;
    min-width: 250px;
}

#nav-login-form div {
    height: auto;
}

/* -----------------------LoggedInOptions----------------------- */
#logged-in-options div {
    min-width: 250px;
    padding: 0px 1rem;
    padding-bottom: 1rem;
    height: 100%;
    line-height: normal;
}

#logged-in-options li {
    background-color: transparent;
}

#logged-in-options a {
    color: var(--blue_darken-2);
    transition: color 0.2s ease-in-out;
}

#logged-in-options a:hover {
    color: var(--cyan_accent-2);
}

/* [-] */
/* -------------------------SideNav========================= */
#side-menu {
    border-top: none;
    border-bottom: none;
    border-left: none;
    height:100vh;
}

#side-menu li>a, #side-menu li>div {
    color: var(--grey_lighten-2);
    font-family: var(--font-primary);
    background-color: transparent;
}

#side-menu li>a i {
    color: var(--grey_lighten-2);
}

#side-menu div.collapsible-header {
    padding-left: 32px;
    font-weight: 500;
}

#side-menu div.collapsible-header:focus {
    background-color: transparent;
}
#side-menu div.collapsible-body {
    background-color: transparent;
}
/* ... */

